plugins {
    id 'java'
    id 'io.quarkus'
    id 'com.adarshr.test-logger' version '3.2.0'
    id "org.kordamp.gradle.jandex" version "1.1.0"
}

apply from: 'buildscripts/code-analysis.gradle'

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        url "https://packages.confluent.io/maven/"
    }
}

dependencies {
    implementation 'io.quarkus:quarkus-mongodb-panache'
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-container-image-jib'
    implementation 'io.quarkus:quarkus-resteasy-reactive-jackson'
    implementation 'io.quarkus:quarkus-grpc'

    testImplementation 'io.quarkus:quarkus-junit5'
    testImplementation 'io.rest-assured:rest-assured'
}

group 'net.explorviz'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}

sourceSets {
    main {
        java {
            srcDirs 'build/classes/java/quarkus-generated-sources/grpc', 'build/classes/java/quarkus-generated-sources/avdl'
        }
    }
}

// Regarding jandex dependency for each task
// https://github.com/kordamp/jandex-gradle-plugin/issues/9

tasks.named('checkstyleMain') {
    dependsOn 'jandex'
}

tasks.named('pmdMain') {
    dependsOn 'jandex'
}

tasks.named('compileTestJava') {
    dependsOn 'jandex'
}

tasks.named('test') {
    dependsOn 'jandex'
}

tasks.named('quarkusDependenciesBuild') {
    dependsOn 'jandex'
}

tasks.withType(JavaCompile).configureEach {
    // Turn on all javac warnings except classfile and processing, which produces many false-positives about annotations
    options.compilerArgs << "-Xlint:all" << "-Xlint:-classfile" << "-Xlint:-processing"
}

test {
    useJUnitPlatform()
    testLogging.showStandardStreams = true
}
